Fix hamburger dropdown and spacing in footer

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -76,7 +76,6 @@ header {
 
 .banner-hero-card {
   color: #EEEEEE;
-  margin-right: 160px;
 }
 
 .footer-callout {
@@ -92,12 +91,11 @@ header {
 .footer {
   padding: 120px 0;
   font-family: "Lato", sans-serif;
-  font-weight: 100;
+  font-weight: 300;
   font-style: normal;
   color: #dfdfdf;
   line-height: 1.8em;
   .footer-text {
-    color: #f2f2f2;
     a {
       &:hover,
       &:focus {
@@ -112,9 +110,10 @@ header {
   h5 {
     text-transform:  uppercase;
     font-family: "Lato", sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     font-style: normal;
     color: #ffffff;
+    margin-top: 0.8em;
     &:after {
       content: "";
       background: #5F368A;
@@ -170,6 +169,7 @@ header {
   @media (max-width: 800px) {
     .ncris {
       width: 120px; /* Even smaller size for very small screens */
+      margin-bottom: 10px;
     }
   }
 
